--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	},
     "require": {
         "slim/slim": "^2.6",
-        "dogancelik/slim-json": "dev-master"
+        "dogancelik/slim-json": "dev-master",
+        "cosenary/instagram" : "master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
