--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "slim/slim": "^2.6",
         "dogancelik/slim-json": "dev-master",
-        "cosenary/instagram" : "master"
+        "cosenary/instagram" : "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
