--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,11 @@
 		}
 	},
     "require": {
-        "slim/slim": "^2.6",
+        "slim/slim": "*",
         "dogancelik/slim-json": "dev-master",
         "cosenary/instagram" : "dev-master",
-         "j7mbo/twitter-api-php": "dev-master"
+         "j7mbo/twitter-api-php": "dev-master",
+         "illuminate/database": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
