Added event model, and reorganized directories, removed old db files

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
 	"autoload": {
 		"psr-0": {
-			"relive" : "src/api/"
-		}
+			"relive" : "app/api/"
+		},
+        "files": [ "app/api/dbconfig.php" ],
+        "classmap": [ "app/api/relive/models/" ]
+
 	},
     "require": {
         "slim/slim": "*",
