--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "cosenary/instagram" : "dev-master",
         "illuminate/database": "*",
         "abraham/twitteroauth": "^0.6.0",
-        "facebook/php-sdk-v4" : "~5.0"
+        "facebook/php-sdk-v4" : "~5.0",
+        "google/apiclient": "1.0.*@beta"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
